src/main/kotlin/com/example/lottery/util/error/UserAlreadyExistsException.kt
package com.example.lottery.util.error

class UserAlreadyExistsException(message: String) : RuntimeException(message)
